--- a/.env
+++ b/.env
@@ -2,11 +2,9 @@
 YOUTUBE_TOPIC=tips de programación,desarrollo de software,desarrollo web,noticia ciberseguridad,noticia inteligencia artificial,tecnología china 2025, noticia IA, hacking con IA
 
 # YouTube Data API v3 Key
-YOUTUBE_API_KEY=AIzaSyAzGtnzZtXmE5Xgd2qk21bMQFXQwrYEzcY
+YOUTUBE_API_KEY=AIzaSyCtvq8h-JAAzur6_vrHiUEQJed1XJhydd8
 
-# Programación para envíos automáticos (formato cron)
-# Cada 4 horas: 0 */4 * * *
-SCHEDULE=0 */3 * * *
+# SCHEDULE variable removed - now using VideoSchedulerService with exact 3-hour intervals
 
 # Nombre del grupo de WhatsApp al que enviar los videos
 TARGET_GROUP_NAME=Club Dev Maval
