Bot WhatsApp: Videos cada 6 horas + Filtro español + Limpieza automática

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Temas específicos para buscar YouTube Shorts (separados por comas)
-YOUTUBE_TOPIC=tips de programación,desarrollo de software,desarrollo web,noticia ciberseguridad,noticia inteligencia artificial,tecnología china 2025, noticia IA, hacking con IA
+YOUTUBE_TOPIC=tips de programación,desarrollo de software,desarrollo web,noticia ciberseguridad
 
 # YouTube Data API v3 Key
 YOUTUBE_API_KEY=AIzaSyCtvq8h-JAAzur6_vrHiUEQJed1XJhydd8
