--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "youtube": "node youtube-api.js"
   },
   "dependencies": {
-    "play-dl": "^1.9.7",
     "@google/genai": "^1.19.0",
     "@google/generative-ai": "^0.21.0",
     "@whiskeysockets/baileys": "^6.5.0",
@@ -25,6 +24,7 @@
     "node-cron": "^3.0.3",
     "pino": "^8.16.2",
     "qrcode": "^1.5.4",
-    "qrcode-terminal": "^0.12.0"
+    "qrcode-terminal": "^0.12.0",
+    "yt-dlp-wrap": "^2.3.12"
   }
 }
