--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "node-cron": "^3.0.3",
     "pino": "^8.16.2",
     "qrcode": "^1.5.4",
-    "qrcode-terminal": "^0.12.0",
-    "yt-dlp-wrap": "^2.3.12"
+    "qrcode-terminal": "^0.12.0"
   }
 }
