--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-cron": "^3.0.3",
     "pino": "^8.16.2",
     "qrcode": "^1.5.4",
-    "qrcode-terminal": "^0.12.0"
+    "qrcode-terminal": "^0.12.0",
+    "node-fetch": "^2.7.0"
   }
 }
