--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "youtube": "node youtube-api.js"
   },
   "dependencies": {
+    "@distube/ytdl-core": "^4.16.12",
     "@google/genai": "^1.19.0",
     "@google/generative-ai": "^0.21.0",
     "@whiskeysockets/baileys": "^6.5.0",
